# dec-lab

./: .gitignore  pyproject.toml
miniproject-1/: README.md  eda.ipynb  helpers.py
miniproject-1/config/: job_data.py  job_map.py  stopwords.py
miniproject-1/notebooks/: 01_etl_quick.ipynb  03_analysis.ipynb
miniproject-1/scripts/: run_pipeline.sh  set_crontab_cmd.txt
miniproject-1/src/: main.py
miniproject-1/src/extract/: fetch_csv.py
miniproject-1/src/load/: load_job.py  postgres.py
miniproject-1/src/pipeline/: run_etl.py
miniproject-1/src/transfom/: address.py  job_title.py  salary.py
miniproject-1/src/utils/: helpers.py  logging.py  utils.py
miniproject-1/tests/: conftest.py  test_fetch_csv.py
miniproject-1/tests/transform/: test_address.py  test_job_title.py  test_salary.py
miniproject-1/tests/utils/: test_classify_job_group.py  test_clean_title_vi.py  test_extract_salary_info.py  test_parse_address.py
