[project]
name = "dec-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "thuphan",email = "thuleanhphan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.5.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mypy (>=1.11)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
