[project]
name = "dec-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "thuphan",email = "thuleanhphan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.5.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mypy (>=1.11)",
    "unidecode (>=1.4.0,<2.0.0)",
    "pandas-stubs (>=2.3.3.251201,<3.0.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]

[tool.pytest.ini_options]
pythonpath = ["miniproject-1"]
testpaths = ["miniproject-1/tests"]
